--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,7 +1,9 @@
 <%- include header%>
 
+	<div class="container-fluid" style="margin-top: 60px;">
+		<h1><%= title %></h1>
+    	<p>Welcome to <%= title %></p>
+	</div>
 
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
 
 <%- include footer%>
