--- a/app/views/detail.ejs
+++ b/app/views/detail.ejs
@@ -1,12 +1,17 @@
 <%- include header %>
 
 <div class="container-fluid" style="margin-top: 60px;">
-	<div class="row" style="margin-left: -50px;margin-right: -40px;">
+	<div class="row">
 		<div class="col-md-12" >
-			<h3><span><%= title %></span></h3>
+			<h3><span class="detail-title"><%= title %></span></h3>
 
 				<%= publishDate%>
-				sdfsdfsdf
+				<%= author%>
+				<%= editor%>
+				<%= source%>
+				<%= data%>
+
+				
 				
 		</div>
 	</div>
