--- a/app/views/loadbar.ejs
+++ b/app/views/loadbar.ejs
@@ -1,3 +1,6 @@
-<div id="loadbox">
-	<div id="loadbar"></div>
+<div class="container-fluid">
+	<div id="loadbox">
+		<div id="loadbar"></div>
+	</div>
 </div>
+
