--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,9 +1,21 @@
 <%- include header%>
-
-	<div class="container-fluid" style="margin-top: 60px;">
-		<h1><%= title %></h1>
-    	<p>Welcome to <%= title %></p>
-	</div>
+<div style="position: relative;min-height: 500px;background-color: #18bc9c;margin-top: -20px;padding-top: 90px;z-index: -3;padding-bottom: 100px;">
+	<div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    	<img id="logo" src="/images/logo.jpg" width="220" alt="大连东软信息学院">
+                    <div>
+                        <!-- <span id="logo-name">大连东软信息学院</span> -->
+                        <span id="logo-name">Dalian Neusoft University of Information</span>
+                        
+                        <hr class="star-light">
+                        <span id="logo-description">Neusoft News Application</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
+	
 
 
 <%- include footer%>
