--- a/app/views/navbar.ejs
+++ b/app/views/navbar.ejs
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="position:relative;">
         <div class="container">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -28,6 +28,9 @@
                     </li>
                     <li class="page-scroll">
                         <a href="/lecture">讲座</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="/tel">电话簿</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#">图集</a>
