--- a/app/views/detail.ejs
+++ b/app/views/detail.ejs
@@ -1,7 +1,7 @@
 <%- include header %>
 
 
-<div class="container-fluid" style="margin-top: 60px;">
+<div class="container-fluid" style="margin-top: 60px;min-height: 600px;">
 	<div class="row">
 		<div class="col-md-12" >
 			<h3><span class="detail-title"><%= title %></span></h3>
