--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -1,7 +1,6 @@
 <%- include header %>
 
-
-<div class="container-fluid" style="margin-top: 60px;padding-right: 20px;">
+<div class="container-fluid" style="margin-top: 60px;padding-right: 20px;min-height: 600px;">
 	<div class="row">
 		<div class="col-md-12" >
 			<h2><span style="text-transform: uppercase;"><%= title %></span></h2>
