--- a/app/views/navbar.ejs
+++ b/app/views/navbar.ejs
@@ -35,6 +35,11 @@
                     <li class="page-scroll">
                         <a href="#">图集</a>
                     </li>
+                    <% if (sessionId){%>
+                    <li class="page-scroll">
+                        <a href="/logout">注销</a>
+                    </li>
+                    <% } %>
                 </ul>
             </div>
 
