reconstructe router to be more simple and brief

--- a/app/views/navbar.ejs
+++ b/app/views/navbar.ejs
@@ -18,16 +18,16 @@
                         <a href=""></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/news">新闻</a>
+                        <a href="/list?option=news">新闻</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/activity">活动</a>
+                        <a href="/list?option=activity">活动</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/notice">通知</a>
+                        <a href="/list?option=notice">通知</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/lecture">讲座</a>
+                        <a href="/list?option=lecture">讲座</a>
                     </li>
                     <li class="page-scroll">
                         <a href="/tel">电话簿</a>
