change the style of app

--- a/app/views/tel.ejs
+++ b/app/views/tel.ejs
@@ -1,6 +1,6 @@
 <%- include header %>
 
-<div class="container-fluid" style="position: relative;margin-top: 60px;">
+<div class="container" style="position: relative;margin-top: 60px;">
 	<div class="row">
 		<div class="col-md-12" >
 			<h2><span style="text-transform: uppercase;"><%= title %></span></h2>
