change index page style

--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -4,9 +4,9 @@
   	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title><%= title %></title>
+    <meta name="description" content="Easy Application of Neusoft News">
+    <meta name="author" content="qianjiahao">
+    <title>Neusoft News</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
   </head>
