add cool faces into login page

--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -1,11 +1,12 @@
 <%- include header%>	
 <div class="container" style="margin-top: 150px;margin-bottom: 220px;min-height: 600px;">
 
+
       <form style="max-width: 400px;margin:0 auto;" action="" method="POST">
-        <h2 style="text-align: center;"><%= title%></h2>
-        <input type="text" name="id" class="form-control" placeholder="学号" required="" autofocus="">
-        <input type="password" name="birth" class="form-control" placeholder="生日" required="">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">submit</button>
+        <h2 style="text-align: center;"><%= title%>&emsp;&emsp;<%= cool%></h2>
+        <input type="text" name="id" class="form-control" placeholder="11位学号" required="" autofocus="">
+        <input type="password" name="birth" class="form-control" placeholder="8位生日, 如：199x0x0x" required="">
+        <button class="btn btn-lg btn-primary btn-block" style="margin-top: 30px;" type="submit">submit</button>
       </form>
 
     </div>
