add github address

--- a/app/views/copyright.ejs
+++ b/app/views/copyright.ejs
@@ -1,4 +1,4 @@
 
 <p id="copyright">
-	Copyright © 2004 qianjiahao. <br/>All rights reserved. 
+	Copyright © 2004 qianjiahao. <a href="https://github.com/qianjiahao/Neusoft-News">github</a><br/>All rights reserved. 
 </p>
