--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -147,12 +147,10 @@ ul{
 }
 
 #loadbox{
-	margin-top: 51px;
 	height: 10px;
 	width: 100%;
-	position: absolute;
+	position: relative;
 	top: 0;
-	margin-left: -10px;
 	margin-bottom: 10px;
 }
 #loadbar{
@@ -161,7 +159,7 @@ ul{
 	width: 30%;
 	position: absolute;
 	top: 0;
-	margin-left: -10px;
+	/*margin-left: -10px;*/
 }
 
 
