--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include header%>
-<div style="position: relative;min-height: 500px;background-color: #18bc9c;margin-top: -20px;padding-top: 90px;z-index: -3;padding-bottom: 100px;">
+<div style="position: relative;min-height: 500px;background-color: #18bc9c;padding: 120px 0 100px;margin: 0 auto;">
 	<div class="container">
             <div class="row">
                 <div class="col-lg-12">
