--- a/app/views/loadbar.ejs
+++ b/app/views/loadbar.ejs
@@ -1,6 +1,6 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid"> -->
 	<div id="loadbox">
 		<div id="loadbar"></div>
 	</div>
-</div>
+<!-- </div> -->
 
