--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -151,7 +151,7 @@ ul{
 	width: 100%;
 	position: relative;
 	top: 0;
-	margin-bottom: 10px;
+	background-color: #18bc9c;
 }
 #loadbar{
 	height: 10px;
