update the header keywords and description

--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -4,9 +4,10 @@
   	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Easy Application of Neusoft News">
+    <meta name="description" content="大连东软信息学院新闻助手,新闻助手">
     <meta name="author" content="qianjiahao">
-    <title>Neusoft News</title>
+    <meta name="keywords" content="neusoft,news,大连东软信息学院新闻">
+    <title>neusoft news</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
   </head>
