update the header keywords and description

--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="大连东软信息学院新闻助手,新闻助手">
     <meta name="author" content="qianjiahao">
-    <meta name="keywords" content="neusoft,news,大连东软信息学院新闻">
+    <meta name="keywords" content="neusoft,news,大连东软信息学院新闻,heroku,qianjiahao">
     <title>neusoft news</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
