update the header keywords and description

--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -4,9 +4,9 @@
   	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="大连东软信息学院新闻助手,新闻助手">
+    <meta name="description" content="大连东软信息学院 - Dalian Neusoft University of information 大连东软信息学院是经国家教育部批准设立，由东软控股、亿达集团共同投资举办的一所以工学为主，兼办管理学、文学、艺术学等学科专业的民办普通高等院校。学校下设计算机科学与技术系、信息技术与商务管理系、电子工程系、数字艺术系、英语系、日语系、基础教学部、科研管理与研究生部、国际教育学院、继续教育学院10个教学机构...">
     <meta name="author" content="qianjiahao">
-    <meta name="keywords" content="neusoft,news,大连东软信息学院新闻,heroku,qianjiahao">
+    <meta name="keywords" content="大连东软信息学院 - Dalian Neusoft University of information 大连东软信息学院,东软信息学院,东软学院,东软,neusoft,大连东软,大连高校,辽宁二本院校,CDIO,TOPCARES-CDIO">
     <title>neusoft news</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
