update the construction for html5

--- a/app/views/copyright.ejs
+++ b/app/views/copyright.ejs
@@ -1,4 +1,5 @@
-
-<p id="copyright">
-	Copyright © 2004 qianjiahao. <a href="https://github.com/qianjiahao/Neusoft-News">github</a><br/>All rights reserved. 
-</p>
+<section>
+	<p id="copyright">
+		Copyright © 2004 qianjiahao. <a href="https://github.com/qianjiahao/Neusoft-News">github</a><br/>All rights reserved. 
+	</p>
+</section>
