--- a/app/views/loadbar.ejs
+++ b/app/views/loadbar.ejs
@@ -1,6 +1,7 @@
-<!-- <div class="container-fluid"> -->
+<section>
 	<div id="loadbox">
 		<div id="loadbar"></div>
 	</div>
-<!-- </div> -->
+</section>
+
 
