--- a/app/views/footer.ejs
+++ b/app/views/footer.ejs
@@ -1,8 +1,9 @@
 	
-
-	<%- include copyright%>
- 	<script type="text/javascript" src="/javascripts/common.js"></script>
- 	<script type="text/javascript" src="/javascripts/jquery.min.js"></script>
-	<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
-  </body>
+		<footer>
+			<%- include copyright%>
+			<script type="text/javascript" src="/javascripts/common.js"></script>
+		 	<script type="text/javascript" src="/javascripts/jquery.min.js"></script>
+			<script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
+		</footer>
+ 	</body>
 </html>
