--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,19 +1,24 @@
 <%- include header%>
-<div style="position: relative;min-height: 500px;background-color: #18bc9c;padding: 120px 0 100px;margin: -10px auto 0;z-index: -3;">
-	<div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    	<img id="logo" src="/images/logo.jpg" width="220" alt="大连东软信息学院">
-                    <div>
-                        <span id="logo-name">Dalian Neusoft University of Information</span>
-                        
-                        <hr class="star-light">
-                        <span id="logo-description">Neusoft News Application</span>
+<header>
+    <section>
+        <div style="position: relative;min-height: 500px;background-color: #18bc9c;padding: 120px 0 100px;margin: -10px auto 0;z-index: -3;">
+            <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <img id="logo" src="/images/logo.jpg" width="220" alt="大连东软信息学院">
+                            <div>
+                                <span id="logo-name">Dalian Neusoft University of Information</span>
+                                
+                                <hr>
+                                <span id="logo-description">Neusoft News Application</span>
+                            </div>
+                        </div>
                     </div>
-                </div>
             </div>
         </div>
-</div>
+    </section>
+</header>
+
 	
 
 
