--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -1,24 +1,28 @@
 <%- include header %>
+<header>
+	<section>
+		<div class="container" style="margin-top: 60px;padding-right: 20px;min-height: 600px;">
+			<div class="row">
+				<div class="col-md-12" >
+					<h2><span style="text-transform: uppercase;"><%= title %></span></h2>
 
-<div class="container" style="margin-top: 60px;padding-right: 20px;min-height: 600px;">
-	<div class="row">
-		<div class="col-md-12" >
-			<h2><span style="text-transform: uppercase;"><%= title %></span></h2>
+						<% data.forEach(function(ele){ %>
 
-				<% data.forEach(function(ele){ %>
-
-					<section>
-						<div class="item">
-							<a class="item-a" href="/detail?url=<%= ele.href%>">
-								<div class="item-content ellipsis">
-									<%= ele.title %>
+							<section>
+								<div class="item">
+									<a class="item-a" href="/detail?url=<%= ele.href%>">
+										<div class="item-content ellipsis">
+											<%= ele.title %>
+										</div>
+									</a>
 								</div>
-							</a>
-						</div>
-					</section> 
-				<%	})%>
+							</section> 
+						<%	})%>
+				</div>
+			</div>
 		</div>
-	</div>
-</div>
+	</section>
+</header>
+
 
 <%- include footer %>
