--- a/app/views/tel.ejs
+++ b/app/views/tel.ejs
@@ -1,24 +1,29 @@
 <%- include header %>
 
-<div class="container" style="position: relative;margin-top: 60px;">
-	<div class="row">
-		<div class="col-md-12" >
-			<h2><span style="text-transform: uppercase;"><%= title %></span></h2>
+<header>
+	<section>
+		<div class="container" style="position: relative;margin-top: 60px;">
+			<div class="row">
+				<div class="col-md-12" >
+					<h2><span style="text-transform: uppercase;"><%= title %></span></h2>
 
-				<% data.forEach(function(ele){ %>
+						<% data.forEach(function(ele){ %>
 
-					<section>
-						<div class="item-tel">
-							<div class="item-tel-content">
-								<span class="tel-name"><%- ele.name%></span>
-								<span class="tel-position">地点：<%- ele.position%></span>
-								<span class="tel-tel">电话：<%- ele.tel%></span>
-							</div>
-						</div>
-					</section> 
-				<%	})%>
+							<section>
+								<div class="item-tel">
+									<div class="item-tel-content">
+										<span class="tel-name"><%- ele.name%></span>
+										<span class="tel-position">地点：<%- ele.position%></span>
+										<span class="tel-tel">电话：<%- ele.tel%></span>
+									</div>
+								</div>
+							</section> 
+						<%	})%>
+				</div>
+			</div>
 		</div>
-	</div>
-</div>
+	</section>
+</header>
+
 
 <%- include footer %>
