--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include header%>
 <header>
     <section>
-        <div style="position: relative;min-height: 500px;background-color: #18bc9c;padding: 120px 0 100px;margin: -10px auto 0;z-index: -3;">
+        <div style="min-height: 500px;background-color: #18bc9c;padding: 80px 0 100px;margin: -10px auto 0;">
             <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
