--- a/app/views/navbar.ejs
+++ b/app/views/navbar.ejs
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" style="position:relative;margin-bottom:0;">
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="margin-bottom:0;">
         <div class="container">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
